update test database

--- a/tests/database.ipynb
+++ b/tests/database.ipynb
@@ -26,8 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# local_library = True\n",
-    "local_library = False\n",
+    "local_library = True\n",
+    "# local_library = False\n",
     "\n",
     "if local_library : \n",
     "    da_tran_SQL = imp.load_source('da_tran_SQL', 'py_topping/data_connection/database.py').da_tran_SQL\n",
@@ -88,7 +88,7 @@
     "        self.df1 = pd.DataFrame({'col1' : [1,2,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
     "        self.df2 = pd.DataFrame({'col1' : [4,5,6,7,8] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
     "        self.table_name = 'unit_test_git'\n",
-    "        self.df1.to_sql(self.table_name, con = self.sql.engine, index = False, if_exists = 'replace')\n",
+    "        self.sql.sub_dump(self.df1, self.table_name ,mode_in = 'replace')\n",
     "\n",
     "    def test_sp(self):\n",
     "        sql_q = \"\"\" CREATE OR ALTER PROCEDURE unit_test_git_SP (@PARAM1 AS VARCHAR(100))\n",
@@ -139,6 +139,13 @@
     "        \n",
     "    def test_replace3(self) :\n",
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2','col3'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.append(self.df2)\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)        \n",
+    "        \n",
+    "    def test_replace4(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2','col3'], partition_delete = 1)\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = self.df1.append(self.df2)\n",
     "        result, expect = help_test(df_read, expect_df)\n",
@@ -250,7 +257,7 @@
     "        self.df1 = pd.DataFrame({'col1' : [1,2,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
     "        self.df2 = pd.DataFrame({'col1' : [4,5,6,7,8] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
     "        self.table_name = 'unit_test_git'\n",
-    "        self.df1.to_sql(self.table_name, con = self.sql.engine, index = False, if_exists = 'replace')\n",
+    "        self.sql.sub_dump(self.df1, self.table_name ,mode_in = 'replace')\n",
     "        self.sql.parallel_dump = True\n",
     "        self.sql.max_parallel = 2\n",
     "        self.sql.partition_size = 2\n",
@@ -304,6 +311,13 @@
     "        \n",
     "    def test_replace3(self) :\n",
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2','col3'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.append(self.df2)\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace4(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2','col3'], partition_delete = 1)\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = self.df1.append(self.df2)\n",
     "        result, expect = help_test(df_read, expect_df)\n",
@@ -411,7 +425,7 @@
     "        self.df1 = pd.DataFrame({'col1' : [1,2,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
     "        self.df2 = pd.DataFrame({'col1' : [4,5,6,7,8] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
     "        self.table_name = 'unit_test_git'\n",
-    "        self.df1.to_sql(self.table_name, con = self.sql.engine, index = False, if_exists = 'replace')\n",
+    "        self.sql.sub_dump(self.df1, self.table_name ,mode_in = 'replace')\n",
     "\n",
     "    def test_sp(self):\n",
     "        sql_q = \"\"\" CREATE OR ALTER PROCEDURE unit_test_git_SP (@PARAM1 AS VARCHAR(100))\n",
@@ -462,6 +476,13 @@
     "        \n",
     "    def test_replace3(self) :\n",
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2','col3'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.append(self.df2)\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace4(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2','col3'], partition_delete = 1)\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = self.df1.append(self.df2)\n",
     "        result, expect = help_test(df_read, expect_df)\n",
@@ -570,7 +591,7 @@
     "        self.df1 = pd.DataFrame({'col1' : [1,2,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
     "        self.df2 = pd.DataFrame({'col1' : [4,5,6,7,8] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
     "        self.table_name = 'unit_test_git'\n",
-    "        self.df1.to_sql(self.table_name, con = self.sql.engine, index = False, if_exists = 'replace')\n",
+    "        self.sql.sub_dump(self.df1, self.table_name ,mode_in = 'replace')\n",
     "\n",
     "    def test_sp(self):\n",
     "        sql_q = \"\"\" drop procedure if exists unit_test_git_SP;\"\"\"\n",
@@ -623,6 +644,13 @@
     "        \n",
     "    def test_replace3(self) :\n",
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2','col3'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.append(self.df2)\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace4(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2','col3'], partition_delete = 1)\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = self.df1.append(self.df2)\n",
     "        result, expect = help_test(df_read, expect_df)\n",
@@ -733,7 +761,7 @@
     "        self.df1 = pd.DataFrame({'col1' : [1,2,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
     "        self.df2 = pd.DataFrame({'col1' : [4,5,6,7,8] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
     "        self.table_name = 'unit_test_git'\n",
-    "        self.df1.to_sql(self.table_name, con = self.sql.engine, index = False, if_exists = 'replace')\n",
+    "        self.sql.sub_dump(self.df1, self.table_name ,mode_in = 'replace')\n",
     "\n",
     "    def test_sp(self):\n",
     "        sql_q = \"\"\" drop procedure if exists unit_test_git_SP;\"\"\"\n",
@@ -786,6 +814,13 @@
     "        \n",
     "    def test_replace3(self) :\n",
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2','col3'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.append(self.df2)\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace4(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2','col3'], partition_delete = 1)\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = self.df1.append(self.df2)\n",
     "        result, expect = help_test(df_read, expect_df)\n",
@@ -979,6 +1014,13 @@
     "        expect_df = self.df1.append(self.df2)\n",
     "        result, expect = help_test(df_read, expect_df)\n",
     "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace4(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2','col3'], partition_delete = 1)\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.append(self.df2)\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
     "\n",
     "    def test_new1_str(self) :\n",
     "        self.sql.dump_new(df_in = self.df2 , table_name_in = self.table_name, list_key = 'col1')\n",
@@ -1032,7 +1074,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Error with Null, so Control Format of Key correctly\n",
+    "Error with Null, because formatting of null will change type of data into float <br>\n",
+    "So pay attention on Data and Format of Key columns\n",
     "\n",
     "***"
    ]
@@ -1065,7 +1108,7 @@
     "        self.df1 = pd.DataFrame({'col1' : [1,2,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
     "        self.df2 = pd.DataFrame({'col1' : [4,5,6,7,8] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
     "        self.table_name = 'unit_test_git'\n",
-    "        self.df1.to_sql(self.table_name, con = self.sql.engine, index = False, if_exists = 'replace')\n",
+    "        self.sql.sub_dump(self.df1, self.table_name ,mode_in = 'replace')\n",
     "\n",
     "#     def test_sp(self):\n",
     "#         sql_q = \"\"\" CREATE OR REPLACE PROCEDURE unit_test_git_SP (PARAM1 INT)\n",
@@ -1117,6 +1160,13 @@
     "        \n",
     "    def test_replace3(self) :\n",
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2','col3'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.append(self.df2)\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace4(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2','col3'], partition_delete = 1)\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = self.df1.append(self.df2)\n",
     "        result, expect = help_test(df_read, expect_df)\n",
@@ -1208,7 +1258,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -1228,7 +1278,7 @@
     "        self.df1 = pd.DataFrame({'col1' : [1,2,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
     "        self.df2 = pd.DataFrame({'col1' : [4,5,6,7,8] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
     "        self.table_name = 'unit_test_git'\n",
-    "        self.df1.to_sql(self.table_name, con = self.sql.engine, index = False, if_exists = 'replace')\n",
+    "        self.sql.sub_dump(self.df1, self.table_name ,mode_in = 'replace')\n",
     "\n",
     "#     def test_sp(self):\n",
     "#         sql_q = \"\"\" CREATE OR REPLACE PROCEDURE unit_test_git_SP (PARAM1 INT)\n",
@@ -1280,6 +1330,13 @@
     "        \n",
     "    def test_replace3(self) :\n",
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2','col3'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.append(self.df2)\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace4(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2','col3'], partition_delete = 1)\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = self.df1.append(self.df2)\n",
     "        result, expect = help_test(df_read, expect_df)\n",
@@ -1386,7 +1443,7 @@
     "        self.df1 = pd.DataFrame({'col1' : [1,2,3,4,5] , 'col2' : [1,1,2,2,3] , 'col3' : [1,1,1,1,1]})\n",
     "        self.df2 = pd.DataFrame({'col1' : [4,5,6,7,8] , 'col2' : [3,3,4,4,5] , 'col3' : [2,2,2,2,2]})\n",
     "        self.table_name = 'unit_test_git'\n",
-    "        self.df1.to_sql(self.table_name, con = self.sql.engine, index = False, if_exists = 'replace')\n",
+    "        self.sql.sub_dump(self.df1, self.table_name ,mode_in = 'replace')\n",
     "        \n",
     "    def test_read_sql(self):\n",
     "        df_read = self.sql.read(self.table_name)\n",
@@ -1425,6 +1482,13 @@
     "        \n",
     "    def test_replace3(self) :\n",
     "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2','col3'])\n",
+    "        df_read = self.sql.read(self.table_name)\n",
+    "        expect_df = self.df1.append(self.df2)\n",
+    "        result, expect = help_test(df_read, expect_df)\n",
+    "        self.assertEqual(result, expect)\n",
+    "        \n",
+    "    def test_replace4(self) :\n",
+    "        self.sql.dump_replace(df_in = self.df2 , table_name_in = self.table_name, list_key = ['col1','col2','col3'], partition_delete = 1)\n",
     "        df_read = self.sql.read(self.table_name)\n",
     "        expect_df = self.df1.append(self.df2)\n",
     "        result, expect = help_test(df_read, expect_df)\n",
@@ -1490,6 +1554,13 @@
     "\n",
     "unittest.main(argv = ['first-arg-is-ignored'], exit = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
