Samples > update da_tran_SQL

--- a/samples/database.ipynb
+++ b/samples/database.ipynb
@@ -1084,7 +1084,17 @@
    "source": [
     "### 3rd Method : dump_replace\n",
     "\n",
-    "You could update the existing dataframe by using this method"
+    "You could update the existing dataframe by using this method\n",
+    "\n",
+    "`self.dump_replace(df_in, table_name_in, list_key, math_logic = '', partition_delete = 100000, debug = False)**`\n",
+    "\n",
+    "**List of Parameter**\n",
+    " - **df_in** : DataFrame to dump into Table (Pandas DataFrame)\n",
+    " - **table_name_in** : Name of Table (Str)\n",
+    " - **list_key** : List of key columns (Str or List)\n",
+    " - **math_logic** : Use math logic to filter your table (Dict), default : ''\n",
+    " - **partition_delete** : Number of row delete per time (Int), default : 100,000 *Available 0.3.6*\n",
+    " - **debug** : To show SQL Query or Not (Boolean), default : False"
    ]
   },
   {
