samples > Update dependencies in header of sample file (maybe not all)

--- a/samples/data_preparation.ipynb
+++ b/samples/data_preparation.ipynb
@@ -2,16 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "compliant-distance",
+   "id": "radical-character",
    "metadata": {},
    "source": [
+    "## Load Required Libraries\n",
+    " - ```pip install pandas```<br>\n",
+    " - ```pip install sklearn```<br> \n",
+    " \n",
     "## Set up Raw Data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "foster-airport",
+   "id": "juvenile-breeding",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "yellow-shape",
+   "id": "broke-moisture",
    "metadata": {},
    "source": [
     "## Import Library"
@@ -103,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "pursuant-richardson",
+   "id": "canadian-blowing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "forward-seven",
+   "id": "national-radar",
    "metadata": {},
    "source": [
     "***\n",
@@ -123,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acute-michael",
+   "id": "equipped-corporation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "boolean-words",
+   "id": "precise-monitoring",
    "metadata": {},
    "source": [
     "### Standard Lagging"
@@ -146,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "broad-deficit",
+   "id": "placed-reliance",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "legendary-report",
+   "id": "democratic-moderator",
    "metadata": {},
    "source": [
     "### Edit Name"
@@ -259,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "attempted-tactics",
+   "id": "worst-ireland",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "considerable-combat",
+   "id": "juvenile-powder",
    "metadata": {},
    "source": [
     "### Keep Null Value"
@@ -371,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "threatened-sessions",
+   "id": "fossil-genealogy",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "entertaining-afternoon",
+   "id": "convertible-passport",
    "metadata": {},
    "source": [
     "***\n",
@@ -504,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quality-clark",
+   "id": "selected-attraction",
    "metadata": {},
    "source": [
     "### Create Encoder"
@@ -513,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "certified-delicious",
+   "id": "little-variable",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "waiting-organ",
+   "id": "sexual-burlington",
    "metadata": {},
    "source": [
     "### Encode Column"
@@ -534,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "southeast-contract",
+   "id": "limited-bolivia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "technical-preparation",
+   "id": "worst-logic",
    "metadata": {},
    "source": [
     "### Decode Column"
@@ -555,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "foster-tractor",
+   "id": "subject-image",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adjustable-trainer",
+   "id": "experimental-great",
    "metadata": {},
    "source": [
     "### Encoder in Action\n",
@@ -579,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "common-denial",
+   "id": "after-trunk",
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "saving-cleanup",
+   "id": "round-yemen",
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prime-variable",
+   "id": "stainless-method",
    "metadata": {},
    "source": [
     "**Create Encoder from train set**"
@@ -729,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "regulation-category",
+   "id": "aggressive-glucose",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "passive-petroleum",
+   "id": "strong-scene",
    "metadata": {},
    "source": [
     "Encoder will store sklearn's LaberEncoding Model <br>\n",
@@ -758,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "limiting-booth",
+   "id": "demonstrated-completion",
    "metadata": {},
    "source": [
     "**Transform train set**"
@@ -767,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "mighty-desert",
+   "id": "configured-family",
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +840,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "binary-particular",
+   "id": "orange-myrtle",
    "metadata": {},
    "source": [
     "**Decode encoded train set**"
@@ -845,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "cheap-contest",
+   "id": "french-webster",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +917,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stupid-empty",
+   "id": "loaded-resident",
    "metadata": {},
    "source": [
     "**Transform test set** <br>\n",
@@ -923,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "backed-thomas",
+   "id": "plastic-region",
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +1002,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "civilian-treat",
+   "id": "breathing-silicon",
    "metadata": {},
    "source": [
     "encode_col will automatic use max number + 1 for data that never seen before\n",
@@ -1010,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "european-mongolia",
+   "id": "powered-methodology",
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1088,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "latin-might",
+   "id": "whole-jacket",
    "metadata": {},
    "source": [
     "Decode will automatic decode \"3\" that not in train set as \"unknown\""
