--- a/samples/database.ipynb
+++ b/samples/database.ipynb
@@ -26,6 +26,7 @@
     " - ```pip install google-cloud-bigquery-storage```<br>\n",
     " - ```pip install pybigquery```<br>\n",
     " - ```pip install pandas-gbq```<br>\n",
+    " - ```pip install pyarrow```<br>\n",
     " \n",
     "**PostGreSQL Driver** <br>\n",
     " - ```pip install psycopg2```<br>\n",
@@ -2758,7 +2759,7 @@
     "gbq = da_tran_SQL(sql_type = 'bigquery', #set_bgq['type'],\n",
     "                host_name = '{YOUR Project ID}', #set_bgq['project_id'], #\n",
     "                database_name = '{Your Dataset Name}', #set_bgq['dataset'], #\n",
-    "                credentials = '{Path to Credentials file (JSON)}') #set_bgq['credentials_path']) #"
+    "                credentials_path = '{Path to Credentials file (JSON)}') #set_bgq['credentials_path']) #"
    ]
   },
   {
