--- a/samples/gcp.ipynb
+++ b/samples/gcp.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dental-vector",
+   "id": "inner-guatemala",
    "metadata": {},
    "source": [
-    "# Import Library"
+    "# Import Library\n",
+    " - ```pip install google-cloud-storage```<br>\n",
+    " - ```Not sure if I include all yet```<br> "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "blocked-community",
+   "id": "inappropriate-accommodation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "committed-genius",
+   "id": "alternate-application",
    "metadata": {},
    "source": [
     "# Initiate Class"
@@ -29,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "elder-intranet",
+   "id": "killing-heating",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "given-harvest",
+   "id": "abroad-physics",
    "metadata": {},
    "source": [
     "# Download Single File"
@@ -49,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "motivated-diary",
+   "id": "superior-component",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blocked-calculation",
+   "id": "ambient-crime",
    "metadata": {},
    "source": [
     "# Download Whole Folder"
@@ -68,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "devoted-moldova",
+   "id": "royal-landscape",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "enclosed-checklist",
+   "id": "agricultural-symphony",
    "metadata": {},
    "source": [
     "# Upload File"
@@ -87,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "spatial-closure",
+   "id": "featured-prior",
    "metadata": {},
    "outputs": [],
    "source": [
