--- a/samples/lazy_ml.ipynb
+++ b/samples/lazy_ml.ipynb
@@ -2,16 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "sunrise-timber",
+   "id": "fuzzy-opera",
    "metadata": {},
    "source": [
+    "## Load Required Libraries\n",
+    " - ```pip install pandas```<br>\n",
+    " - ```pip install tensorflow>=2```<br>\n",
+    " \n",
     "# Disable Tensorflow Warning"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "latin-description",
+   "id": "different-signal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "monthly-messaging",
+   "id": "unique-oklahoma",
    "metadata": {},
    "source": [
     "# Import Function"
@@ -32,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "opposite-sport",
+   "id": "speaking-robinson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "innovative-burke",
+   "id": "stunning-costume",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "available-cooperative",
+   "id": "conservative-theta",
    "metadata": {},
    "source": [
     "### List of Parameter\n",
@@ -94,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "meaningful-permission",
+   "id": "static-powder",
    "metadata": {},
    "source": [
     "# Sample DataFrame"
@@ -103,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "severe-syndicate",
+   "id": "innocent-banana",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "operational-tuition",
+   "id": "royal-glenn",
    "metadata": {},
    "source": [
     "# Training Phase\n",
@@ -214,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "pretty-beaver",
+   "id": "fourth-central",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accredited-crossing",
+   "id": "cardiac-sellers",
    "metadata": {},
    "source": [
     "### Basic Train With 1 numeric Feature and 1 categorical Feature"
@@ -261,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "least-claim",
+   "id": "manufactured-usage",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "present-alarm",
+   "id": "nasty-mentor",
    "metadata": {},
    "source": [
     "### Basic Train With 2 numeric Feature and 1 categorical Feature"
@@ -309,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "clinical-spider",
+   "id": "completed-brooklyn",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "charitable-weekly",
+   "id": "unnecessary-africa",
    "metadata": {},
    "source": [
     "### Show Model Summary and Curve"
@@ -357,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "married-vintage",
+   "id": "eleven-arabic",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "capital-twelve",
+   "id": "immediate-desert",
    "metadata": {},
    "source": [
     "### Training With Validate Data Set"
@@ -455,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "infectious-patrol",
+   "id": "interracial-playing",
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "changed-poultry",
+   "id": "accurate-alert",
    "metadata": {},
    "source": [
     "### Modify Neural Network and Iteration"
@@ -553,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "desirable-centre",
+   "id": "former-panama",
    "metadata": {
     "scrolled": false
    },
@@ -687,13 +691,7 @@
       "10/10 [==============================] - 0s 7ms/step - loss: 38193.6918 - val_loss: 22548.1543\n",
       "Epoch 43/100\n",
       "10/10 [==============================] - 0s 7ms/step - loss: 25476.2734 - val_loss: 22733.2832\n",
-      "Epoch 44/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 44/100\n",
       "10/10 [==============================] - 0s 6ms/step - loss: 31877.9039 - val_loss: 19750.4902\n",
       "Epoch 45/100\n",
       "10/10 [==============================] - 0s 7ms/step - loss: 33855.7351 - val_loss: 17751.1172\n",
@@ -822,7 +820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ethical-johns",
+   "id": "acquired-transport",
    "metadata": {},
    "source": [
     "# Prediction Phase"
@@ -831,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "owned-comparative",
+   "id": "early-question",
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "martial-folks",
+   "id": "intelligent-arthur",
    "metadata": {},
    "outputs": [
     {
