--- a/samples/run_pipeline.ipynb
+++ b/samples/run_pipeline.ipynb
@@ -4,6 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Load Required Libraries<br>\n",
+    "**Standard Process**\n",
+    " - ```pip install papermill```<br>\n",
+    " - ```pip install jupyter```<br> \n",
+    " - ```pip install notebook```<br>\n",
+    " \n",
+    "**Email Process**\n",
+    " - Same as email_sender\n",
+    " \n",
+    "**SQL Log Process**\n",
+    " - Same as da_tran_SQL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# For my Safety reason, load setting file"
    ]
   },
